some changes on user: added roles
