# internal/auth/controller/http/dto/user.go
@@ -1,6 +1,7 @@
 package dto
 
 type CreateUserRequest struct {
+	RoleID    int
 	FirstName string
 	LastName  string
 	Email     string
