# pkg/protobuf/userservice/gw/user.swagger.json
@@ -5,8 +5,8 @@
     "version": "1.0",
     "contact": {
       "name": "userservice",
-      "url": "https://github.com/agadilkhan",
-      "email": "aagadilkhan@gmail.com"
+      "url": "https://github.com/notfound",
+      "email": "youremail@gmail.com"
     }
   },
   "tags": [
@@ -144,6 +144,10 @@
           "type": "string",
           "format": "int64"
         },
+        "roleId": {
+          "type": "string",
+          "format": "int64"
+        },
         "firstName": {
           "type": "string"
         },
@@ -167,6 +171,6 @@
   },
   "externalDocs": {
     "description": "Сервис для работы с данными юзера",
-    "url": "https://github.com/agadilkhan"
+    "url": "https://github.com/notfound"
   }
 }
